Old source saved.

--- a/IronMan/style.less
+++ b/IronMan/style.less
@@ -1,7 +1,15 @@
-@import url(../../theme);
+/*
+ * IronMan colors
+ */
+ @red-iron: #AD262D;
+ @red-iron-shadow: #96191f;
+ @yellow-iron: #CDA337;
+ @yellow-iron-shadow: #C37B27;
+ @lights: #f4fcff;
+ @black-iron: #09423a;
 
 .ironManContainer {
-  background: @brand-tertiary url(../../assets/img/bg-portfolio.png) repeat;
+  background: #5990BA url(../../assets/img/bg-portfolio.png) repeat;
   margin: 0;
   padding: 60px 0 120px;
 
