--- a/src/theme.css
+++ b/src/theme.css
@@ -16,6 +16,8 @@ html, body {
   font-family: 'Poppins', sans-serif;
   width: 100%;
   position: relative;
+  padding: 0;
+  margin: 0;
 }
 
 ::-moz-selection { /* Code for Firefox */
